[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lib-ml"
version = "0.0.2"  # Placeholder
description = "Shared preprocessing logic for model-training and model-service"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.2.0",
  "scikit-learn>=1.4.0",
  "numpy>=1.26.0"
]

[tool.setuptools]
packages = ["lib_ml"]

[tool.setuptools.package-dir]
"" = "."