[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lib-ml"
version = "0.0.0"  # Placeholder
description = "Shared preprocessing logic for model-training and model-service"
requires-python = ">=3.10"
dependencies = [
  "nltk>=3.6",
  "pandas>=1.0"
]

[tool.setuptools]
packages = ["lib_ml"]

[tool.setuptools.package-dir]
"" = "."